--- a/views/admin/footer.ejs
+++ b/views/admin/footer.ejs
@@ -12,7 +12,7 @@
     <div class="footer-right">
       <img src="img/info.png" class="footer-img" id="info-img" />
       <p>Need help? Click&nbsp;</p>
-      <a href="help_page">here.</a>
+      <a href="/help-page">here.</a>
     </div>
   </footer>
 
