--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -47,11 +47,11 @@
             <form id="contact-form">
               <h2 class="red">Contact Form</h2>
               <br />
-              <i class="fa fa-user-circle icon"></i>
+              <i class="fa fa-user-circle icon symbol"></i>
               <input type="text" id="name" class="contact-field" name="name" placeholder="Type your name here..." />
               <br />
               <br />
-              <i class="fa-solid fa-envelope icon"></i>
+              <i class="fa-solid fa-envelope icon symbol"></i>
               <input type="email" id="email" class="contact-field" name="email" placeholder="Type your email address here..." />
               <br />
               <br />
