--- a/views/homepages/footer.ejs
+++ b/views/homepages/footer.ejs
@@ -5,7 +5,7 @@
 <footer class="footer">
     <div class="footer-left">
       <img src="img/calendar.png" class="footer-img" />
-      <span id="footerTime"></span>
+      <p><span id="footerTime"></span></p>
     </div>
 
     <div class="footer-center">
