--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -68,6 +68,7 @@
   margin-bottom: 0.5rem;
   background-color: #fff3c8;
   border: 0.2rem solid #6e1311;
+  padding: 1rem;
 }
 
 .second-right {
@@ -305,6 +306,17 @@ i {
     align-items: center;
   }
   .contact-field {
-    gap: 1rem;
+    /* gap: 1rem; */
+    padding-left: 1.5rem;
   }
+
+  .symbol {
+    /* border: 1px solid black; */
+    margin-bottom: -1rem;
+  }
+}
+
+.button:active {
+  filter: brightness(90%);
+  transform: scale(0.98);
 }
