--- a/views/homepages/rvs-about.ejs
+++ b/views/homepages/rvs-about.ejs
@@ -6,9 +6,11 @@
     <title>TANIKALA Voting System</title>
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    
     <link rel="stylesheet" type="text/css" href="css/home.css" />
+     <link rel="stylesheet" type="text/css" href="css/rvs.css" />
     <!-- <link rel="stylesheet" type="text/css" href="css/index_election.css" /> -->
-    <link rel="stylesheet" type="text/css" href="css/rvs.css" />
+   
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
@@ -78,7 +80,7 @@
       </div>
     </div>
 
-    <%- include('footer') %>
+     <%- include('../voter/footer') %>
     
     <script src="js/index.js"></script>
   </body>
